--- a/index.html
+++ b/index.html
@@ -2,99 +2,90 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Cadastro de Clientes - Loja</title>
+  <title>Sistema de Entregas com Tentativas</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       padding: 20px;
+      max-width: 450px;
+      margin: auto;
+      background-color: #f9f9f9;
     }
-    form {
-      margin-bottom: 20px;
-    }
-    input {
+    input, button {
+      padding: 10px;
+      width: 100%;
       margin: 5px 0;
-      padding: 5px;
-      width: 200px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
     }
-    button {
-      padding: 6px 12px;
-    }
-    .cliente {
-      margin-bottom: 10px;
-      border-bottom: 1px solid #ccc;
-      padding-bottom: 5px;
+    #mensagem {
+      margin-top: 15px;
+      background-color: #fff4e6;
+      padding: 10px;
+      border-radius: 5px;
     }
   </style>
 </head>
 <body>
-  <h1>Cadastro de Clientes - Loja Tech</h1>
 
-  <form id="formCadastro">
-    <label>Nome: <br><input type="text" id="nome" required></label><br>
-    <label>Idade: <br><input type="number" id="idade" required></label><br>
-    <label>E-mail: <br><input type="email" id="email" required></label><br>
-    <button type="submit">Cadastrar Cliente</button>
-  </form>
+  <h2>📦 Sistema de Entregas</h2>
 
-  <h2>Clientes Cadastrados:</h2>
-  <div id="listaClientes"></div>
+  <label for="destinatario">Nome do Destinatário:</label>
+  <input type="text" id="destinatario" placeholder="Ex: Maria Silva">
+
+  <label for="endereco">Endereço:</label>
+  <input type="text" id="endereco" placeholder="Ex: Rua das Flores, 123">
+
+  <button onclick="tentarEntrega()">Tentar Entregar</button>
+
+  <div id="mensagem"></div>
 
   <script>
-    // Classe Cliente
-    class Cliente {
-      constructor(nome, idade, email) {
-        this.nome = nome;
-        this.idade = idade;
-        this.email = email;
+    class Entrega {
+      constructor(destinatario, endereco) {
+        this.destinatario = destinatario;
+        this.endereco = endereco;
+        this.status = "Preparando para envio";
+        this.tentativas = 0;
       }
 
-      exibirDados() {
-        return `Nome: ${this.nome}, Idade: ${this.idade}, E-mail: ${this.email}`;
-      }
-    }
+      avisarEntrega() {
+        this.tentativas++;
 
-    // Classe Loja
-    class Loja {
-      constructor(nome) {
-        this.nome = nome;
-        this.clientes = [];
-      }
-
-      cadastrarCliente(cliente) {
-        this.clientes.push(cliente);
-      }
-
-      exibirClientes() {
-        const lista = document.getElementById("listaClientes");
-        lista.innerHTML = ""; // limpa a lista antes de exibir novamente
-
-        this.clientes.forEach(cliente => {
-          const div = document.createElement("div");
-          div.className = "cliente";
-          div.textContent = cliente.exibirDados();
-          lista.appendChild(div);
-        });
+        if (this.tentativas < 3) {
+          this.status = "Tentativa de entrega #" + this.tentativas;
+          return `Tentativa ${this.tentativas}: Olá, ${this.destinatario}! Estamos tentando entregar seu pacote no endereço: ${this.endereco}.`;
+        } else if (this.tentativas === 3) {
+          this.status = "Última tentativa";
+          return `⚠️ Última tentativa de entrega! Olá, ${this.destinatario}, estamos tentando entregar seu pacote no endereço: ${this.endereco}. Caso não consigamos, será necessário retirar na agência dos Correios mais próxima.`;
+        } else {
+          this.status = "Entrega não realizada";
+          return `❌ Limite de tentativas atingido. ${this.destinatario}, seu pacote deverá ser retirado na agência dos Correios mais próxima.`;
+        }
       }
     }
 
-    // Criando a loja
-    const minhaLoja = new Loja("Loja Tech");
+    // Guardar uma única entrega ativa
+    let entregaAtual = null;
 
-    // Lógica do formulário
-    const form = document.getElementById("formCadastro");
-    form.addEventListener("submit", function(event) {
-      event.preventDefault();
+    function tentarEntrega() {
+      const nome = document.getElementById("destinatario").value;
+      const endereco = document.getElementById("endereco").value;
 
-      const nome = document.getElementById("nome").value;
-      const idade = parseInt(document.getElementById("idade").value);
-      const email = document.getElementById("email").value;
+      // Criar nova entrega apenas na primeira tentativa
+      if (!entregaAtual) {
+        if (nome === "" || endereco === "") {
+          document.getElementById("mensagem").innerText = "Por favor, preencha todos os campos.";
+          return;
+        }
 
-      const novoCliente = new Cliente(nome, idade, email);
-      minhaLoja.cadastrarCliente(novoCliente);
-      minhaLoja.exibirClientes();
+        entregaAtual = new Entrega(nome, endereco);
+      }
 
-      form.reset(); // limpa o formulário
-    });
+      const mensagem = entregaAtual.avisarEntrega();
+      document.getElementById("mensagem").innerText = mensagem;
+    }
   </script>
+
 </body>
 </html>
